# cui-validator

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: main.rs
