[package]
name = "cui-validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_codegen = "0.5.0-rc.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"